--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ p{
 hr{
   border: dashed #EAF6F6 6px;
   width: 6%;
-  margin: 100px auto;
+  margin: 80px auto;
 }
 a{
   color: #11999E;
@@ -48,6 +48,7 @@ a:hover{
 }
 .bottom-cloud{
   position: absolute;
+  left: 400px;
 }
 .top-cloud{
   position: relative;
